--- a/src/assets/css/general.css
+++ b/src/assets/css/general.css
@@ -10,6 +10,10 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+main {
+    display: grid;
+}
+
 h1, h2, h3 {
     line-height: 1.3;
 }
